--- a/src/App.css
+++ b/src/App.css
@@ -39,5 +39,12 @@
 }
 
 html {
-  background-color: #008DD5;
+  background-color: white;
+  /* background: url(../src/Assets/images/background.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  overflow: hidden;
+  height: 1000px; */
 }
