--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
-  color: white
+  height: 100%;
+  overflow: hidden;
 }
 
 .App-logo {
@@ -40,11 +41,13 @@
 
 html {
   background-color: white;
+  height: 100%;
+}
+
+
   /* background: url(../src/Assets/images/background.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  overflow: hidden;
-  height: 1000px; */
-}
+  overflow: hidden; */
