--- a/src/App.css
+++ b/src/App.css
@@ -50,13 +50,11 @@
 }
 
 html {
-  background-color: white;
   height: 100%;
-  /* background: url(../src/Assets/images/background.jpg) no-repeat center center fixed;
+  background: url(../src/Assets/images/grey.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  overflow: hidden; */
 }
 
