--- a/src/App.css
+++ b/src/App.css
@@ -51,10 +51,10 @@
 
 html {
   height: 100%;
-  background: url(../src/Assets/images/grey.jpg) no-repeat center center fixed;
+  /* background: url(../src/Assets/images/grey.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
+  background-size: cover; */
 }
 
